--- a/minigames/cookie_clicker/cookie_clicker.css
+++ b/minigames/cookie_clicker/cookie_clicker.css
@@ -1,7 +1,13 @@
 body {
+  background-color: black;
+  color: rosybrown;
   font-family: Arial, sans-serif;
   text-align: center;
   margin: 50px;
+}
+
+p {
+  color: gold;
 }
 
 #cookie {
@@ -11,6 +17,7 @@ body {
   border-radius: 50%;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   transition: transform 0.1s;
+
 }
 
 #cookie:active {
@@ -19,5 +26,5 @@ body {
 
 #cookie-count {
   font-size: 2rem;
-  color: #555;
+  color: lavenderblush;
 }
