--- a/minigames/rt_trainer/styles.css
+++ b/minigames/rt_trainer/styles.css
@@ -26,17 +26,47 @@ body {
   border-radius: 50%;
   cursor: pointer;
 }
-#start-button {
-  margin-bottom: 100px;
-  margin-top: 80px;
-  height: 40px;
-  width: 60px;
-  font-size: 15px;
-}
+
 #highest-score {
   margin-top: 12px;
   margin-bottom: 7px;
 }
 #highest-accuracy {
   margin-bottom: 7px;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
+.game-area {
+  text-align: center;
+}
+.hidden {
+  display: none;
+}
+button {
+  margin: 10px;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: aliceblue;
+  background-color: rosybrown;
+}
+
+#start-btn:hover {
+  color: darksalmon;
+  background-color: lavenderblush;
+}
+#save-average-btn:hover {
+  color: darksalmon;
+  background-color: lavenderblush;
+}
+#save-best-btn:hover {
+  color: darksalmon;
+  background-color: lavenderblush;
 }
