--- a/discord_bots/hopecore_v1/browser_demo/hopecore.css
+++ b/discord_bots/hopecore_v1/browser_demo/hopecore.css
@@ -7,13 +7,28 @@ body {
   padding: 0;
 }
 
-h1 {
+h2 {
   margin-top: 90px;
 }
 
+#result img {
+  max-width: 80%;
+  height: auto;
+  margin-top: 14px;
+  margin-bottom: 24px;
+}
+
+#result div {
+  word-wrap: break-word;
+  text-align: center;
+  font-weight: bold;
+}
+
+
+
 #hopecore-link {
   display: inline-block;
-  margin-top: 100px;
+  margin-top: 50px;
   padding: 10px 20px;
   background-color: rosybrown;
   color: aliceblue;
