--- a/minigames/count_clicker/styles.css
+++ b/minigames/count_clicker/styles.css
@@ -8,25 +8,89 @@ body {
   height: 50vh;
   margin: 0;
 }
+
 header {
   font-size: 24px;
   color: white;
   text-align: center;
 }
+
 #counter-container {
   text-align: center;
-  background-color: aliceblue;
+  background-color: rgb(104, 120, 134);
   padding: 20px;
-  border: 4px solid #ccc;
+  border: 4px solid #585757;
   border-radius: 18px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 #counter-display {
+  color: aliceblue;
+  /* text-decoration: underline;
+  text-decoration-color: rosybrown; */
+  background-color: rgb(87, 87, 110);
+  padding: 10px;
+  /* font-size-adjust: 2; */
+}
+
+button {
+  background-color: rgb(190, 80, 102);
   color: black;
-  text-decoration: underline;
-  text-decoration-color: rosybrown;
+}
+
+.toggle-btn {
+  margin: 20px;
+  padding: 10px 15px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: darkgray;
+  color: black;
+}
+
+body[data-theme="light"] .toggle-btn {
+  background-color: rgb(23, 28, 34);
+  color: white;
+}
+
+body[data-theme="light"] header {
+  font-size: 24px;
+  color: black;
+  text-align: center;
+}
+
+body[data-theme="light"] #counter-container {
+  text-align: center;
+  padding: 20px;
+  border: 4px solid #ccc;
+  border-radius: 18px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: rgb(71, 182, 197);
+}
+
+body[data-theme="light"] #counter-display {
+  color: black;
+  /* text-decoration: underline;
+  text-decoration-color: rosybrown; */
   background-color: lavender;
   padding: 10px;
   /* font-size-adjust: 2; */
+}
+
+body[data-theme="light"] button {
+  background-color: rosybrown;
+  color: lavenderblush;
+}
+
+body[data-theme="light"] {
+  background-color: grey;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  margin: 0;
 }
