--- a/minigames/aim_trainer/aim_trainer.css
+++ b/minigames/aim_trainer/aim_trainer.css
@@ -6,26 +6,30 @@ body {
         margin: 0;
         padding: 0;
 }
+
 #timer {
         margin-bottom: 15px;
         color: thistle;
 }
+
 #game-area {
         position: relative;
         align-items: center;
         width: 100vw;
         height: 40vh;
-        background-color: aliceblue;
+        background-color: rgb(59, 76, 92);
         overflow: hidden;
 }
+
 .target {
         position: absolute;
         width: 50px;
         height: 50px;
-        background-color: crimson;
+        background-color: rgb(0, 0, 0);
         border-radius: 50%;
         cursor: pointer;
 }
+
 #start-button {
         margin-bottom: 100px;
         margin-top: 80px;
@@ -33,10 +37,79 @@ body {
         width: 60px;
         font-size: 15px;
 }
+
 #highest-score {
         margin-top: 12px;
         margin-bottom: 7px;
 }
+
 #highest-accuracy {
+        margin-bottom: 7px;
+}
+
+body[data-theme="light"] button {
+        background-color: rosybrown;
+        color: lavenderblush;
+}
+
+.toggle-btn {
+        margin: 20px;
+        padding: 10px 15px;
+        font-size: 1em;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        background-color: darkgray;
+        color: black;
+}
+
+body[data-theme="light"] {
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+        color: black;
+        background-color: rgb(147, 216, 216);
+        margin: 0;
+        padding: 0;
+}
+
+body[data-theme="light"] #timer {
+        margin-bottom: 15px;
+        color: crimson;
+}
+
+body[data-theme="light"] #game-area {
+        position: relative;
+        align-items: center;
+        width: 100vw;
+        height: 40vh;
+        background-color: paleturquoise;
+        overflow: hidden;
+}
+
+body[data-theme="light"] .target {
+        position: absolute;
+        width: 50px;
+        height: 50px;
+        background-color: rgb(209, 129, 145);
+        border-radius: 50%;
+        cursor: pointer;
+}
+
+body[data-theme="light"] #start-button {
+        margin-bottom: 100px;
+        margin-top: 80px;
+        height: 40px;
+        width: 60px;
+        font-size: 15px;
+        background-color: black;
+        color: aliceblue;
+}
+
+body[data-theme="light"] #highest-score {
+        margin-top: 12px;
+        margin-bottom: 7px;
+}
+
+body[data-theme="light"] #highest-accuracy {
         margin-bottom: 7px;
 }
