--- a/minigames/typing_practice_hub/typing_practice/special_characters/special_chars.css
+++ b/minigames/typing_practice_hub/typing_practice/special_characters/special_chars.css
@@ -6,9 +6,11 @@ body {
   margin: 0;
   padding: 0;
 }
+
 h1 {
   margin-top: 20px;
 }
+
 .mode-link {
   display: inline-block;
   margin: 15px;
@@ -19,6 +21,7 @@ h1 {
   border-radius: 5px;
   font-size: 1.2em;
 }
+
 .mode-link:hover {
   background-color: lavenderblush;
   color: darksalmon;
@@ -30,5 +33,37 @@ h1 {
 
 p {
   color: gold;
+  margin-top: 50px;
+}
+
+
+.toggle-btn {
+  margin: 20px;
+  margin-top: 50px;
+  padding: 10px 15px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: darkgray;
+  color: black;
+}
+
+body[data-theme="light"] .toggle-btn {
+  background-color: rgba(197, 109, 109, 0.863);
+  color: lavenderblush;
+}
+
+body[data-theme="light"] {
+  font-family: Arial, sans-serif;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(187, 187, 206);
+}
+
+body[data-theme="light"] p {
+  color: rgb(52, 28, 53);
   margin-top: 50px;
 }
