--- a/minigames/rt_trainer/styles.css
+++ b/minigames/rt_trainer/styles.css
@@ -6,10 +6,12 @@ body {
   margin: 0;
   padding: 0;
 }
-#timer {
+
+/* #timer {
   margin-bottom: 15px;
   color: thistle;
-}
+} */
+
 #game-area {
   position: relative;
   align-items: center;
@@ -18,19 +20,21 @@ body {
   background-color: aliceblue;
   overflow: hidden;
 }
-.target {
+
+/* .target {
   position: absolute;
   width: 50px;
   height: 50px;
   background-color: crimson;
   border-radius: 50%;
   cursor: pointer;
-}
+} */
 
 #highest-score {
   margin-top: 12px;
   margin-bottom: 7px;
 }
+
 #highest-accuracy {
   margin-bottom: 7px;
 }
@@ -44,12 +48,15 @@ body {
   height: 100vh;
   margin: 0;
 }
+
 .game-area {
   text-align: center;
 }
+
 .hidden {
   display: none;
 }
+
 button {
   margin: 10px;
   padding: 7px 15px;
@@ -62,11 +69,38 @@ button {
   color: darksalmon;
   background-color: lavenderblush;
 }
+
 #save-average-btn:hover {
   color: darksalmon;
   background-color: lavenderblush;
 }
+
 #save-best-btn:hover {
   color: darksalmon;
   background-color: lavenderblush;
+}
+
+.toggle-btn {
+  margin: 20px;
+  padding: 10px 15px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: darkgray;
+  color: black;
+}
+
+body[data-theme="light"] .toggle-btn {
+  background-color: rgba(197, 109, 109, 0.863);
+  color: lavenderblush;
+}
+
+body[data-theme="light"] {
+  font-family: Arial, sans-serif;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(187, 187, 206);
 }
