--- a/minigames/cps/styles.css
+++ b/minigames/cps/styles.css
@@ -9,11 +9,13 @@ body {
   height: 80vh;
   margin: 60;
 }
+
 head {
   font-size: 50px;
   color: white;
   text-align: center;
 }
+
 header {
   margin: 60;
   font-size: 28px;
@@ -68,6 +70,7 @@ header {
 #control-btns {
   margin-top: 13px;
 }
+
 #save-btn:hover,
 #reset-btn:hover {
   color: white;
@@ -91,7 +94,8 @@ header {
   font-size: 20px;
   font-weight: bold;
   color: crimson;
-  margin-bottom: 10px; /* Space between the timer and other elements */
+  margin-bottom: 10px;
+  /* Space between the timer and other elements */
 }
 
 #start-btn:hover {
@@ -125,7 +129,7 @@ button {
 /* Highlight active duration button */
 .duration-btn.selected {
   background-color: lightgreen;
-  color: white;
+  color: rgb(58, 48, 48);
   border: 2px solid darkgreen;
 }
 
@@ -134,4 +138,168 @@ button {
   font-size: 20px;
   color: gold;
   margin-top: 20px;
+}
+
+.toggle-btn {
+  margin: 20px;
+  padding: 10px 15px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: darkgray;
+  color: black;
+}
+
+body[data-theme="light"] .toggle-btn {
+  background-color: rosybrown;
+  color: lavenderblush;
+}
+
+body[data-theme="light"] {
+  background-color: rgb(134, 174, 206);
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  margin: 60;
+}
+
+body[data-theme="light"] head {
+  font-size: 50px;
+  color: lavender;
+  text-align: center;
+}
+
+body[data-theme="light"] header {
+  margin: 60;
+  font-size: 28px;
+  color: white;
+  text-align: center;
+  margin-bottom: 16px;
+  margin-top: 20px;
+}
+
+/* time selection buttons */
+body[data-theme="light"] #time-selection {
+  margin-bottom: 20px;
+}
+
+body[data-theme="light"] .duration-btn {
+  font-size: 16px;
+  padding: 10px 25px;
+  margin: 0px 15px;
+  background-color: blanchedalmond;
+  color: black;
+  cursor: pointer;
+}
+
+body[data-theme="light"] .duration-btn:hover {
+  color: rgb(130, 85, 156);
+  background-color: rgb(132, 223, 192);
+}
+
+/* label */
+body[data-theme="light"] #label-container {
+  margin-bottom: 20px;
+}
+
+body[data-theme="light"] #click-container {
+  background-color: rosybrown;
+  width: 400px;
+  height: 260px;
+  position: relative;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body[data-theme="light"] #click-total {
+  font-size: 50px;
+  text-align: center;
+  position: absolute;
+  color: aliceblue;
+  top: -105px;
+}
+
+body[data-theme="light"] #control-btns {
+  margin-top: 13px;
+}
+
+body[data-theme="light"] #save-btn:hover,
+#reset-btn:hover {
+  color: white;
+  background-color: black;
+  /* border-color: black; */
+}
+
+body[data-theme="light"] #start-btn {
+  background-color: rosybrown;
+  width: 400px;
+  height: 260px;
+  position: relative;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+
+body[data-theme="light"] #time-left {
+  font-size: 20px;
+  font-weight: bold;
+  color: crimson;
+  margin-bottom: 10px;
+  /* Space between the timer and other elements */
+}
+
+body[data-theme="light"] #start-btn:hover {
+  color: red;
+  background-color: rgb(87, 35, 35);
+  border-color: black;
+}
+
+body[data-theme="light"] button {
+  size: 20px;
+}
+
+body[data-theme="light"] #counter-container {
+  text-align: center;
+  background-color: aliceblue;
+  padding: 20px;
+  border: 4px solid #ccc;
+  border-radius: 18px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+body[data-theme="light"] #counter-display {
+  color: black;
+  text-decoration: underline;
+  text-decoration-color: rosybrown;
+  background-color: lavender;
+  padding: 10px;
+  /* font-size-adjust: 2; */
+}
+
+/* Highlight active duration button */
+body[data-theme="light"] .duration-btn.selected {
+  background-color: lightgreen;
+  color: rgb(58, 48, 48);
+  border: 2px solid darkgreen;
+}
+
+/* High Score */
+body[data-theme="light"] #high-score {
+  font-size: 20px;
+  color: gold;
+  margin-top: 20px;
+}
+
+/* placeholder */
+body[data-theme="light"] #click-label {
+  color: rgb(134, 174, 206)
 }
