--- a/minigames/number_memory/styles.css
+++ b/minigames/number_memory/styles.css
@@ -64,3 +64,38 @@ body {
 #sequence {
     align-items: center;
 }
+
+.toggle-btn {
+    margin: 20px;
+    padding: 10px 15px;
+    font-size: 1em;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: darkgray;
+    color: black;
+}
+
+body[data-theme="light"] .toggle-btn {
+    background-color: rgba(197, 109, 109, 0.863);
+    color: lavenderblush;
+}
+
+body[data-theme="light"] {
+    font-family: Arial, sans-serif;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+    background-color: rgb(187, 187, 206);
+}
+
+body[data-theme="light"] .progress-bar {
+    width: 100%;
+    height: 100%;
+    background-color: #c786bc;
+    transition: width 0.1s linear;
+}
