Move index.html
index.html needed to be moved to the templates directory to take effect

--- a/highscore_database/v2/templates/index.html
+++ b/highscore_database/v2/templates/index.html
@@ -7,7 +7,13 @@
     <title>Flask App</title>
 </head>
 
-<link rel="stylesheet" href="styles.css">
+<!-- <link rel="stylesheet" href="../styles.css"> -->
+<style>
+    body {
+        background-color: black;
+        color: lavender;
+    }
+</style>
 
 <body>
     <h1>Welcome to the Flask App!</h1>
