Update program to 'work'
Scoring logic isn't quite right. Suspected cause is unsanitized input

--- a/minigames/typing_practice_hub/typing_practice/cs_lingo/cs_lingo.css
+++ b/minigames/typing_practice_hub/typing_practice/cs_lingo/cs_lingo.css
@@ -13,7 +13,7 @@ body {
   right: 10px;
 }
 
-.home-button {
+#home-button {
   display: inline-block;
   background-color: rosybrown;
   color: aliceblue;
