--- a/todo_webapp/todo.css
+++ b/todo_webapp/todo.css
@@ -13,12 +13,13 @@ body {
     border: 1px solid #ddd;
     border-radius: 5px;
     margin-bottom: 5px;
-    background-color: #f9f9f9;
+    background-color: rgb(59, 76, 92);
+    color: thistle;
 }
 
 .task button {
-    background-color: red;
-    color: white;
+    color: thistle;
+    color: crimson;
     border: none;
     border-radius: 3px;
     padding: 5px;
