--- a/discord_bots/hopecore_v1/browser_demo/hopecore.css
+++ b/discord_bots/hopecore_v1/browser_demo/hopecore.css
@@ -40,3 +40,21 @@ h2 {
   background-color: plum;
   color: black;
 }
+
+#auto-gen {
+  display: inline-block;
+  margin-top: 50px;
+  padding: 10px 20px;
+  background: rgb(65, 65, 65);
+  color: lavender;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 1.2em;
+  transition: color 0.3s, background-color 0.3s;
+  margin-bottom: 50px;
+}
+
+#auto-gen:hover {
+  background-color: plum;
+  color: black;
+}
